--- a/BTS Biotech/BMGG/pageVideoBMGG.html
+++ b/BTS Biotech/BMGG/pageVideoBMGG.html
@@ -171,11 +171,68 @@ picture-in-picture" allowfullscreen></iframe>
 	</td>
 </tr>
 </table>
+	
 </details>
 
 
+<!-- ------------------------------------------------------------------>
+<h1>La mutagénèse dirigée</h1>
+<h4>Définition :</h4>
+<dfn>Ensemble des techniques de génie génétique permettant de modifier une séquence choisie (de manière ciblée, sélective).</dfn>
+<details><summary>vidéos du cours</summary>
 
+<table><caption><a href="https://docs.google.com/presentation/d/1nleaTj1U6hjhKEoL4oIlkRfOLqxrrDQAYSz96piYgOQ/edit?usp=sharing" 
+		   title="lien vers le diaporama" target="_blank">diaporama commenté</a></caption>
+<tr>
+	<th colspan="1">partie 1 sur ...</th><th colspan="1">partie 2 sur ...</th>
+</tr>
+<tr>
+	<td>
+	<iframe width="560" height="315" 
+src="https://www.youtube.com/embed/dSn6ojRplKA" 
+title="YouTube video player" 
+frameborder="0" allow="accelerometer; autoplay; 
+clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+allowfullscreen></iframe>
+	</td>
+	<td>
+		<!-- deuxième vidéo -->
+	</td>
+</tr>
+</table>
+	
+</details>
 
+<!-- ------------------------------------------------------------------>
+<h1>Bio-informatique : biologie <em title="dans la silice = qui utilise l'informatique et ses puces de silicium">in-silico</em></h1>
+<h4>Définition :</h4>
+<dfn>Ensemble de techniques informatiques permettant d'étudier les informations biologiques numérisées.</dfn>  
+	<p>Par exemple :<br/> les données de séquençage sont publiées dans des bases de données publiques et accéssibles librement via l'utilisation
+		de moiteurs de recherche spécialisés tels que le <strong><mark>portail</mark></strong>
+		<a href="https://www.ncbi.nlm.nih.gov/" title="Nationale Center Of Biotechnology" target="_blank">NCBI</a> </p>
+
+<details><summary>tutos des TP de bio-informatique</summary>
+
+<table><caption>tutos sur l'utilisation de <a href="https://serial-cloner.fr.malavida.com/" title="lien vers la page de téléchargement de serial cloner" target="_blank">serial cloner</a></caption>
+<tr>
+	<th colspan="2">partie 1 sur ...</th>
+</tr>
+<tr>
+	<td>
+	<iframe width="560" height="315" 
+src="https://www.youtube.com/embed/dSn6ojRplKA" 
+title="YouTube video player" 
+frameborder="0" allow="accelerometer; autoplay; 
+clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+allowfullscreen></iframe>
+	</td>
+	<td>
+
+	</td>
+</tr>
+</table>
+	
+</details>
 </body>
 </html>
 
